Added file loading Completed printing list of students, staff, and faculty in View.